# evilway

./: EVILWAY_CLAUDECODE_PROMPT.md  EVILWAY_CONFIG_PROMPT.md  EVILWAY_CONTEXT.md  EVILWAY_MOVEMENT_PROMPT.md  README.md  evilwayrc.example  meson.build  meson_options.txt
include/: config.h  evilway.h  window.h
src/: config.c  main.c  window.c
